fix dark mode homepage border issue

--- a/css/stylehomepage.css
+++ b/css/stylehomepage.css
@@ -135,6 +135,10 @@ hr {
     background-color: white;
 }
 
+.piccontainerborder:hover {
+    background-color: unset;
+}
+
 .third {
     opacity: 1;
     max-height: 100%;
